--- a/TT-2016-B045/archivosTex/analisisydiseno.tex
+++ b/TT-2016-B045/archivosTex/analisisydiseno.tex
@@ -1,2 +1,19 @@
 \chapter{An\'alisis y Dise\~no} % (fold)
-\section{Diagramas de caso de uso}
+
+\section{Business Process Model and Notation (BPMN)}
+
+
+\begin{figure}[H]
+\centering
+	\includegraphics[width=16cm, height=7cm]{./images/bp_descargar.png}
+	\caption{BPMN Subir archivo.}
+
+\end{figure}
+
+\begin{figure}[H]
+\centering
+	\includegraphics[width=16cm, height=7cm]{./images/bp_subir.png}
+	\caption{BPMN Descargar archivo.}
+
+\end{figure}
+
