--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -123,7 +123,7 @@
 \include{archivosTex/requerimientos}
 %\include{archivosTex/adv-clasificadores}
 %\include{archivosTex/propuesta}
-%\include{archivosTex/analisisydiseno}
+\include{archivosTex/analisisydiseno}
 %\include{archivosTex/desarrollo}
 %\include{archivosTex/conclusiones2}
 %\include{archivosTex/anexos}
