--- a/TT-2016-B045/archivosTex/introduccion.tex
+++ b/TT-2016-B045/archivosTex/introduccion.tex
@@ -15,13 +15,13 @@ Una posible solución para proteger a los datos es echar mano de la criptografí
 	\item La criptografía simétrica: Utiliza una misma llave para realizar el proceso de cifrado y descifrado, ver figura 1.1.
 		\begin{figure}[H]
 			\centering
-			\includegraphics[width=10cm, height=5cm]{./images/Cripto_Simetrica.jpg}
+			\includegraphics[width=10cm, height=5cm]{./images/sim.jpeg}
 			\caption{Diagrama de criptografía simétrica.}
 		\end{figure}
 	\item La criptografía asimétrica: Utiliza una clave para el cifrado y otra para el descifrado, ver figura 1.2. [4]
 		\begin{figure}[H]
 			\centering
-			\includegraphics[width=10cm, height=5cm]{./images/Cripto_Asimetrica.jpg}
+			\includegraphics[width=10cm, height=5cm]{./images/asim.jpeg}
 			\caption{Diagrama de criptografía asimétrica.}
 		\end{figure}
 \end{itemize}
