--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -120,7 +120,7 @@
 \mainmatter
 \include{archivosTex/introduccion}
 \include{archivosTex/preliminares}
-\include{archivosTex/requerimientos}
+%\include{archivosTex/requerimientos}
 %\include{archivosTex/adv-clasificadores}
 %\include{archivosTex/propuesta}
 \include{archivosTex/analisisydiseno}
