--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -101,7 +101,7 @@
 	    {\fontsize{16}{20} \textbf{``Protocolo criptográfico para el almacenamiento sin duplicados en la nube, resistente a ataques por fuerza bruta.''}}\vspace{1cm}\\
 	    {\fontsize{14}{20} \textit{2016-B045}}\vspace{1cm}\\
 	    {\fontsize{14}{20} \textit{Presentan}}\\
-	    {\fontsize{14}{20} \textbf{Eder Jonathan Aguirre Cruz \\ Diana Leslie González Olivier \\ Jhonatan Saulés Cortés }}\vspace{2.5cm}\\
+	    {\fontsize{14}{20} \textbf{Eder Jonathan Aguirre Cruz \\ Diana Leslie González Olivier \\ \vspace{.2cm} Jhonatan Saulés Cortés }}\vspace{2.5cm}\\
 	    {\fontsize{14}{20} \textit{Directora}}\\
 	    {\fontsize{14}{20} \textbf{Dra. Sandra D\'\i az Santiago}}\vspace{4.5cm}\\
 	    \end{center}
