--- a/TT-2016-B045/archivosTex/introduccion.tex
+++ b/TT-2016-B045/archivosTex/introduccion.tex
@@ -1,30 +1,20 @@
 \chapter{Introducci\'on} % (fold)
 \label{cha:introduccion}
 %\addcontentsline{toc}{chapter}{Introducción}
-Hoy en día el manejo de información en la sociedad juega un papel importante en el desarrollo de las actividades que la conforman. Millones de personas en el mundo tienen la facilidad de acceder a un dispositivo electrónico que les permite manipular esta información o almacenarla para posteriormente darle un uso específico. La información que circula en dispositivos electrónicos es mayor a la memoria disponible que ofrecen estos, a medida que el volumen de información aumenta, también lo hace la demanda para los servicios de almacenamiento en línea. Un gran incremento en el uso de estos servicios implica tener más infraestructura y personal para que los sistemas de almacenamiento tengan más capacidad y puedan cubrir la demanda que se presenta en el mercado. Si bien el almacenamiento logró dar buenos resultados al cliente en sus primeras etapas, ahora la preocupación por el incremento de infraestructura para seguir dando esos resultados se ha incrementado considerablemente. ~\cite{Bellare} ~\cite{Keelveedhi}
+Hoy en día el manejo de información en la sociedad juega un papel importante en el desarrollo de las actividades que la conforman. Millones de personas en el mundo tienen la facilidad de acceder a un dispositivo electrónico que les permite manipular esta información o almacenarla para posteriormente darle un uso específico. La información que circula en dispositivos electrónicos es mayor a la memoria disponible que ofrecen estos, a medida que el volumen de información aumenta, también lo hace la demanda para los servicios de almacenamiento en línea ~\cite{Bellare}. Un gran incremento en el uso de estos servicios implica tener más infraestructura y personal para que los sistemas de almacenamiento tengan más capacidad y puedan cubrir la demanda que se presenta en el mercado. Si bien el almacenamiento logró dar buenos resultados al cliente en sus primeras etapas, ahora la preocupación por el incremento de infraestructura para seguir dando esos resultados se ha incrementado considerablemente  ~\cite{Keelveedhi}.
 
-Una de las principales razones por la que está sucediendo es que muchos usuarios almacenan un mismo archivo un claro ejemplo es que n usuarios pueden subir la misma canción, por lo tanto esta se encuentra almacenada en las n cuentas de la nube, esto implica un gasto innecesario de almacenamiento. Según un estudio realizado por HP se estima que hay 1 Exabyte de datos almacenados en la nube, además de 2012 a 2017, las cargas de trabajo de los centros de datos crecerán 2,3 veces, mientras que en la nube aumentarán 3,7 veces, lo cual implica que el Exabyte que se estima se podría llegar a triplicar y las empresas que proporcionan estos servicios disminuyen su oferta en el mercado. ~\cite{popa}
+Una de las principales razones del incremento en el tamaño en la estructura de almacenamiento de servicios en linea, es la duplicación de archivos por varios y diferentes usuarios, por ejemplo \textbf{\textit{n}} usuarios pueden subir la misma canción, por lo tanto esta se encuentra almacenada en las \textbf{\textit{n}} cuentas de la nube, lo cuál implica un gasto innecesario de almacenamiento. Según un estudio ~\cite{popa} realizado por HP se estima que hay 1 Exabyte de datos almacenados en la nube, además de 2012 a 2017, las cargas de trabajo de los centros de datos crecerán 2,3 veces, mientras que en la nube aumentarán 3,7 veces, lo cual implica que el Exabyte que se estima se podría llegar a triplicar y las empresas que proporcionan estos servicios disminuyen su oferta en el mercado. 
 
-Un problema agregado a la situación de servicios externos para almacenar datos, es la falta de protección estos, ya que al utilizar un servicio de almacenamiento, los usuarios están haciendo uso de estos servicios los cuales no están protegidos bajo ningún esquema de seguridad y por tanto los usuarios no cuentan con una garantía que le da la completa integridad a la información almacenada. Un claro ejemplo para comprobar esta problemática es que cualquier individuo que tenga acceso a los archivos almacenados, podrá visualizar el contenido de estos, que en ocasiones son utilizados para fines lucrativos perjudicando la integridad de la información del usuario.
+Sumado al agraviante problema de crecimiento en la estructura de almacenamiento en línea, existe un elemento que pocas organizaciones y usuarios contemplan para el almacenamiento de su información, y es la seguridad. Las plataformas que ahora ofrecen el servicio de almacenamiento en la nube, no contemplan la protección e integridad de la información, este servicio está sujeto a los ataques de adversarios que están interesados en el robo, manipulación o alteración de la información importante para los usuarios. Dicho servicio carece de algún esquema de seguridad y por tanto no se puede garantizar la permanencia de los usuarios en la plataforma de almacenamiento. 
+Dejar sin resolver la seguridad de la infofrmación, puede generar negativas consecuenicias hacia cualquier usuario de la plataforma de almacencamiento, cualquier individuo que tenga acceso a los archivos almacenados en ésta plataforma, podrá visualizar el contenido de estos, comprometiendo la fidelidad e integridad de la información para poder usarla en situaciones que pudieran llegar a perjudicar al usuario. 
+\\ \\ 
+Hoy en día existen soluciones para cada uno de los problemas, una de ellas consiste en encontrar y eliminar la duplicación dentro de los datos sin comprometer su integridad o la fidelidad. El objetivo es almacenar más datos en menos espacio mediante la segmentación de los archivos en pequeños trozos de tamaño variable\textit{(32 a 128 KB)}, la identificación de fragmentos duplicados, manteniendo una sola copia de cada trozo. Las copias repetidas del trozo se sustituyen por una referencia a la única copia. Los trozos se comprimen y luego son organizados en contenedores especiales de archivos en la carpeta Información del volumen del sistema. Para garantizar la privacidad de los datos obtenidos después del proceso de eliminación de duplicación, es posible utilizar algoritmos criptográficos ~\cite{microsoft}.
 
-Hoy en día existen soluciones para cada uno de los problemas, una de ellas consiste en encontrar y eliminar la duplicación dentro de los datos sin comprometer su integridad o la fidelidad. El objetivo es almacenar más datos en menos espacio mediante la segmentación de los archivos en pequeños trozos de tamaño variable (32 a 128 KB), la identificación de fragmentos duplicados, manteniendo una sola copia de cada trozo. Las copias redundantes del trozo se sustituyen por una referencia a la única copia. Los trozos se comprimen y luego son organizados en contenedores especiales de archivos en la carpeta Información del volumen del sistema. Para garantizar la privacidad de los datos obtenidos después del proceso de eliminación de duplicación, es posible utilizar algoritmos criptográficos. ~\cite{microsoft}
-
-Una posible solución para proteger a los datos es echar mano de la criptografía, ciencia que se encarga del estudio de técnicas para transformar la información a una forma que no pueda entenderse a simple vista; sin embargo, el objetivo de la Criptografía no es sólo mantener los datos secretos, sino también protegerlos contra modificación y comprobar la fuente de los mismos. ~\cite{fundamentos} La criptografía esta dividida en dos grandes tipos que son:
-
-\begin{itemize}
-	\item La criptografía simétrica: Utiliza una misma llave para realizar el proceso de cifrado y descifrado, ver figura 1.1.
-		\begin{figure}[H]
-			\centering
-			\includegraphics[width=10cm, height=5cm]{./images/sim.jpeg}
-			\caption{Diagrama de criptografía simétrica.}
-		\end{figure}
-	\item La criptografía asimétrica: Utiliza una clave para el cifrado y otra para el descifrado, ver figura 1.2. [4]
-		\begin{figure}[H]
-			\centering
-			\includegraphics[width=10cm, height=5cm]{./images/asim.jpeg}
-			\caption{Diagrama de criptografía asimétrica.}
-		\end{figure}
-\end{itemize}
+Una posible solución para la protección a los datos y eliminar duplicaciones de estos, es echar mano de la criptografía. Ciencia que se encarga del estudio de técnicas para transformar la información a una forma que no pueda entenderse a simple vista; sin embargo, el objetivo de la Criptografía no es sólo mantener los datos secretos, sino también protegerlos contra modificación o manipulación y comprobar la fuente de los mismos ~\cite{fundamentos}. 
+\\ \\
+Está ciencia que matiene la información segura se encuentra dividida en dos grandes tipos: \textbf{Criptográfia simétrica} y la \textbf{Criptografía asimétrica}. La criptografía simétrica o también llamada criptografía de llave privada, basa su seguridad en una sóla llave que se comparte entre dos usuarios que quieren compartir información, dicha llave es utilizada para cifrar un archivo al ser enviado al otro usuario y este utilizará la misma llave para descifrarlo cuando lo reciba. 
+\\
+La criptografía asimétrica o criptografía de llave pública7
 
 Puesto que ambas cuestiones, la eliminación de duplicados y la privacidad de la información, son importantes, se ha comenzado a
 proponer mecanismos que solucionen ambos problemas de manera conjunta, que son: Dupless ~\cite{Bellare}, ABS: the apportioned backup
