Requerimientos no funconales -

--- a/TT-2016-B045/master_tt.tex
+++ b/TT-2016-B045/master_tt.tex
@@ -25,6 +25,8 @@
 \usepackage{textcomp}
 \usepackage{appendix}
 \usepackage{multirow}
+\usepackage{longtable}
+\usepackage{verbatim} 
 
 
 \AtBeginDocument{%
